--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "worker:whatsapp": "ts-node src/workers/whatsapp-worker/index.ts",
-    "worker:instagram": "ts-node src/workers/instagram-worker/index.ts"
+    "worker:instagram": "ts-node src/workers/instagram-worker/index.ts",
+    "start:whatsapp-only": "ENABLE_WHATSAPP=true ENABLE_INSTAGRAM=false npm run dev",
+    "start:instagram-only": "ENABLE_WHATSAPP=false ENABLE_INSTAGRAM=true npm run dev",
+    "start:both": "ENABLE_WHATSAPP=true ENABLE_INSTAGRAM=true npm run dev",
+    "deploy:whatsapp": "PLATFORM=whatsapp npm run build && npm start",
+    "deploy:instagram": "PLATFORM=instagram npm run build && npm start",
+    "deploy:both": "PLATFORM=both npm run build && npm start"
   },
   "keywords": [
     "whatsapp",
@@ -30,64 +36,64 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "firebase-admin": "^12.0.0",
-    "redis": "^4.6.10",
-    "bull": "^4.12.0",
-    "ws": "^8.14.2",
-    "socket.io": "^4.7.4",
-    "whatsapp-web.js": "^1.23.0",
-    "puppeteer": "^21.5.2",
-    "qrcode": "^1.5.3",
     "@google/generative-ai": "^0.2.1",
-    "zod": "^3.22.4",
-    "joi": "^17.11.0",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "uuid": "^9.0.1",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "bull": "^4.12.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^12.7.0",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
+    "puppeteer": "^21.5.2",
+    "qrcode": "^1.5.3",
+    "redis": "^4.6.10",
     "sharp": "^0.32.6",
-    "axios": "^1.6.2",
-    "node-cron": "^3.0.3"
+    "socket.io": "^4.7.4",
+    "uuid": "^9.0.1",
+    "whatsapp-web.js": "^1.23.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "ws": "^8.14.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/morgan": "^1.9.9",
-    "@types/ws": "^8.5.10",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.7",
-    "@types/node-cron": "^3.0.11",
-    "typescript": "^5.3.2",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "jest": "^29.7.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.19.9",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^2.0.16",
-    "eslint": "^8.55.0",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
-    "nodemon": "^3.0.2"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   }
-} 
+}
