--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
     "redis": "^4.6.10",
     "sharp": "^0.32.6",
     "socket.io": "^4.7.4",
