--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "migrate:schema": "ts-node scripts/supabase-schema-migrator.ts",
     "migrate:data": "ts-node scripts/run-data-migration.ts",
     "test:supabase-connection": "ts-node scripts/test-supabase-connection.ts",
-    "test:supabase-flow": "ts-node scripts/test-supabase-flow.ts"
+    "test:supabase-flow": "ts-node scripts/test-supabase-flow.ts",
+    "test:basic-crud": "ts-node scripts/test-basic-crud.ts"
   },
   "keywords": [
     "whatsapp",
